--- a/src/Components/NavbarCss/Navbar.css
+++ b/src/Components/NavbarCss/Navbar.css
@@ -32,7 +32,7 @@
   /* width: 100px;
   height: 79px;
   border-radius: 35%; */
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 /* .searchBox {
